Correction du modèle User et mise à jour des fichiers associés

--- a/Match-App/config/services.yaml
+++ b/Match-App/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
     env(MONGODB_URL): ''
     env(MONGODB_DB): ''
+    uploads_directory: '%kernel.project_dir%/public/uploads'
+
 
 services:
     # default configuration for services in *this* file
