--- a/Match-App/.env
+++ b/Match-App/.env
@@ -48,3 +48,13 @@ MONGODB_URL=mongodb+srv://emmanuelbasket01:koWg1stUK6hbmYWs@projetdev.li17c.mong
 
 MONGODB_DB=matchDatabase
 ###< doctrine/mongodb-odm-bundle ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+# The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
+MERCURE_URL=https://example.com/.well-known/mercure
+# The public URL of the Mercure hub, used by the browser to connect
+MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
+# The secret used to sign the JWTs
+MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+###< symfony/mercure-bundle ###
