--- a/Match-App/config/packages/mercure.yaml
+++ b/Match-App/config/packages/mercure.yaml
@@ -6,3 +6,4 @@ mercure:
             jwt:
                 secret: '%env(MERCURE_JWT_SECRET)%'
                 algorithm: 'hmac.sha256'
+                publish: ['*']
