--- a/Match-App/config/routes.yaml
+++ b/Match-App/config/routes.yaml
@@ -4,4 +4,8 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+profile_view:
+    path: /profile/{id}
+    controller: App\Controller\ProfileAnotherUserController::view
+
 
